--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <!-- Add more dependencies as needed -->
+	<dependency>
+        <groupId>org.jdesktop</groupId>
+        <artifactId>animation</artifactId>
+        <version>1.0</version>
+    </dependency>
   </dependencies>
     
   <build>
