--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,20 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
+
+  	<dependency>
+  		<groupId>org.mariadb.jdbc</groupId>
+  		<artifactId>mariadb-java-client</artifactId>
+  		<version>2.6.2</version>
+  	</dependency>
+
+	<dependency>
+    	<groupId>io.github.cdimascio</groupId>
+    	<artifactId>dotenv-java</artifactId>
+    	<version>3.0.0</version>
+	</dependency>
+
+
         <!-- Add your dependencies here -->
 	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
 	<dependency>
@@ -55,6 +69,9 @@
         <artifactId>animation</artifactId>
         <version>1.0</version>
     </dependency>
+
+	
+
   </dependencies>
     
   <build>
