--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
   
   <dependencies>
 
+	<dependency>
+    	<groupId>commons-validator</groupId>
+    	<artifactId>commons-validator</artifactId>
+    	<version>1.8.0</version>
+	</dependency>
+
+
   	<dependency>
   		<groupId>org.mariadb.jdbc</groupId>
   		<artifactId>mariadb-java-client</artifactId>
