Added Hashing and logic for login/signup. Also added variable for getting users name and displaying on homepage

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
     	<version>3.0.0</version>
 	</dependency>
 
+	<dependency>
+		<groupId>org.mindrot</groupId>
+		<artifactId>jbcrypt</artifactId>
+		<version>0.4</version>
+	</dependency>
+
+
 
         <!-- Add your dependencies here -->
 	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
